--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -39,7 +39,7 @@ jobs:
     if: >
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success' &&
-      (github.actor == 'renovate' ||
+      (github.actor == 'renovate[bot]' ||
         github.actor == 'dependabot[bot]' && (
           contains(github.event.workflow_run.head_commit.message, 'ump ')
       )) &&
