--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,11 @@
   "extends": [
     "config:base"
   ],
-  "prHourlyLimit": 50
+  "prHourlyLimit": 50,
+  "packageRules": [
+    {
+      "matchManagers": ["maven", "gradle", "gradle-wrapper", "npm", "pip_requirements", "pip_setup"],
+      "automerge": true
+    }
+  ]
 }
