--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,7 @@
       "automerge": true
     }
   ],
-  "rebaseWhen": "conflicted"
+  "rebaseWhen": "conflicted",
+  "prConcurrentLimit": 50,
+  "prHourlyLimit": 10
 }
