PREP Java 19 testing

--- a/.github/workflows/newer-java.yml
+++ b/.github/workflows/newer-java.yml
@@ -16,6 +16,7 @@ jobs:
         include:
           - java-version: 17
           - java-version: 18
+          - java-version: 19
     env:
       SPARK_LOCAL_IP: localhost
 
