--- a/.github/workflows/release-create.yml
+++ b/.github/workflows/release-create.yml
@@ -137,7 +137,7 @@ jobs:
         
         !
         
-        git log --perl-regexp --author '^(?!.*dependabot(-preview)?|.*nessie-release-workflow).*$'\
+        git log --perl-regexp --author '^(?!.*dependabot(-preview)?|!.*renovate|.*nessie-release-workflow).*$'\
           --format='format:* %s' ${LAST_TAG}..HEAD |\
           grep -v '^\* \[release\] .*$' >> /tmp/releases.md
         
@@ -161,7 +161,7 @@ jobs:
         * See release notes and changelog on GitHub: https://github.com/projectnessie/nessie/releases/tag/nessie-${RELEASE_VERSION}
         !
         
-        git log --perl-regexp --author '^(?!.*dependabot(-preview)?|.*nessie-release-workflow).*$'\
+        git log --perl-regexp --author '^(?!.*dependabot(-preview)?|!.*renovate|.*nessie-release-workflow).*$'\
           --format='format:* %s' ${LAST_TAG}..HEAD python/ |\
           grep -v '^\* \[release\] .*$' >> /tmp/HISTORY.rst
         
