--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -19,12 +19,9 @@
       platformAutomerge: true
     },
 
-    // Check for updates, merge automatically - npm + pip
+    // Schedule npm + pip on weekends
     {
       matchManagers: ["npm", "pip_requirements", "pip_setup"],
-      matchUpdateTypes: ["minor", "patch"],
-      automerge: true,
-      platformAutomerge: true,
       extends: ["schedule:weekends"]
     },
 
