EXPERIMENT: Web-UI using Kotlin/JS

--- a/servers/quarkus-server/src/main/resources/application.properties
+++ b/servers/quarkus-server/src/main/resources/application.properties
@@ -138,6 +138,8 @@ quarkus.http.enable-compression=true
 quarkus.http.enable-decompression=true
 quarkus.http.body.handle-file-uploads=false
 
+quarkus.http.cors=true
+
 ## Quarkus auth settings
 #quarkus.oidc.credentials.secret=
 #quarkus.oidc.client-id=
