Experiment: Bump to Quarkus 3.0.0.Beta1

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,8 +31,8 @@ parquet = "1.12.3"
 picocli = "4.7.1"
 postgresContainerTag = "14"
 protobuf = "3.22.2"
-quarkus = "2.16.5.Final"
-quarkusAmazon = "2.16.5.Final"
+quarkus = "3.0.0.Beta1"
+quarkusAmazon = "3.0.0.Beta1"
 quarkusLoggingSentry = "2.0.0"
 quarkusNativeBuilderImage = "quay.io/quarkus/ubi-quarkus-mandrel-builder-image:22.3-java17"
 quarkusJibBaseJvmImage = "registry.access.redhat.com/ubi8/openjdk-17-runtime:1.14"
