--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -71,5 +71,6 @@
   prConcurrentLimit: 50,
   prHourlyLimit: 2,
 
-  commitMessageExtra: "to {{#if isPinDigest}}{{{newDigestShort}}}{{else}}{{#if isMajor}}{{prettyNewMajor}}{{else}}{{#if isSingleVersion}}{{prettyNewVersion}}{{else}}{{#if newValue}}{{{newValue}}}{{else}}{{{newDigestShort}}}{{/if}}{{/if}}{{/if}}{{/if}} {{{warnings}}}{{{notes}}}{{{changelogs}}}"
+  commitBodyTable: true,
+  // commitBody: "{{{warnings}}}{{{notes}}}{{{changelogs}}}",
 }
