--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -94,7 +94,8 @@ bouncycastle-bcpkix = { module = "org.bouncycastle:bcpkix-jdk15on", version.ref 
 bouncycastle-bcprov = { module = "org.bouncycastle:bcprov-jdk15on", version.ref = "bouncycastle" }
 cassandra-driver-bom = { module = "com.datastax.oss:java-driver-bom", version.ref = "cassandraDriver" }
 cassandra-driver-core = { module = "com.datastax.oss:java-driver-core" }
-cassandra-quarkus = { module = "com.datastax.oss.quarkus:cassandra-quarkus-client", version = "1.1.3" }
+cassandra-quarkus = { module = "com.datastax.oss.quarkus:cassandra-quarkus-client", version = "1.2.0-alpha1" }
+cassandra-quarkus-tests = { module = "com.datastax.oss.quarkus:cassandra-quarkus-test-framework", version = "1.2.0-alpha1" }
 caffeine = { module = "com.github.ben-manes.caffeine:caffeine", version = "2.9.3" }
 cel-bom = { module = "org.projectnessie.cel:cel-bom", version = "0.3.13" }
 cel-jackson = { module = "org.projectnessie.cel:cel-jackson" }
