Refactor CI workflow
Unifies most main + PR workflows into a single workflow.

The unified CI workflow consists of 2 "stages":
* Checks - test, intTest, NesQuEIT, etc
* Finalize - a "success" dummy job + a "save to github-cache" job

Utilizes the Gradle build cache for all stages. The updated build cache
of the jobs in the checks stage are saved as artifacts (with the minimum
retention period). The updated build cache is pushed back to GigHub's
cache when the checks have successfully finished.

Java CI runs against Java 11 and Java 17, where it is meaningful.
(Spark + Deltalake tests always run against 11, so not run against
Java 17.) Some checks also run against the latest Java version.

Codecov was not added to the new workflow, it wasn't working for quite
a while now or produced wrong results.

Build logs and reports are not archived. Test results and relevant logs
are available via Gradle build scans.

Windows + macOS workflows are not included in the unified workflow.

There is also another [Gradle cache
action](https://github.com/burrunan/gradle-cache-action), which utilizes
the GitHub's cache like a remote Gradle cache. However, that puts too
much load (requests) against GitHub's cache, which in turn throttles our
CI and responds with HTTP/429 (Too many requests). See [this
issue](https://github.com/burrunan/gradle-cache-action/issues/66).

Fixes #6365

--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -92,6 +92,7 @@ jobs:
     - name: Gradle / compile
       uses: gradle/gradle-build-action@v2
       with:
+        cache-read-only: true
         arguments: assemble --scan
 
     - name: Gradle / unit test
@@ -123,9 +124,9 @@ jobs:
     env:
       working-directory: ./python
     strategy:
-      max-parallel: 4
+      max-parallel: 1
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10', '3.7']
 
     steps:
     - uses: actions/checkout@v3.5.0
