--- a/.github/workflows/check-results-upload.yml
+++ b/.github/workflows/check-results-upload.yml
@@ -12,7 +12,7 @@ name: Check Results Upload
 
 on:
   workflow_run:
-    workflows: ["PR Build Check", "Main CI"]
+    workflows: ["CI Build"]
     types:
         - completed
 
