--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,8 @@ org.gradle.jvmargs=\
   --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
   --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
   --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+
+
+
+# foo
+
