WIP catalog merge

--- a/gradle/projects.iceberg.properties
+++ b/gradle/projects.iceberg.properties
@@ -8,6 +8,7 @@ nessie-gc-iceberg-mock=gc/gc-iceberg-mock
 nessie-gc-tool=gc/gc-tool
 nessie-gc-tool-inttest=gc/gc-tool-inttest
 nessie-catalog-api=catalog/api
+nessie-catalog-content=catalog/content
 nessie-catalog-service=catalog/service
 nessie-catalog-server=catalog/quarkus-catalog
 nessie-catalog-server-its=catalog/quarkus-spark-iceberg-tests
