WIP Protobuf Jackson Mapper

--- a/gradle/projects.main.properties
+++ b/gradle/projects.main.properties
@@ -16,6 +16,10 @@ nessie-gc-base-tests=gc/gc-base-tests
 nessie-gc-repository-jdbc=gc/gc-repository-jdbc
 nessie-perftest-gatling=perftest/gatling
 nessie-perftest-simulations=perftest/simulations
+nessie-jackson-protobuf=tools/jackson-protobuf
+nessie-jackson-protobuf-fixture=tools/jackson-protobuf-fixture
+nessie-jackson-protobuf-annotations=tools/jackson-protobuf-annotations
+nessie-jackson-protobuf-fixture-proto=tools/jackson-protobuf-fixture-proto
 nessie-jaxrs=servers/jax-rs
 nessie-jaxrs-testextension=servers/jax-rs-testextension
 nessie-jaxrs-tests=servers/jax-rs-tests
