--- a/gradle/projects.main.properties
+++ b/gradle/projects.main.properties
@@ -72,6 +72,8 @@ nessie-versioned-storage-common-serialize=versioned/storage/common-serialize
 nessie-versioned-storage-common-tests=versioned/storage/common-tests
 nessie-versioned-storage-dynamodb=versioned/storage/dynamodb
 nessie-versioned-storage-dynamodb-tests=versioned/storage/dynamodb-tests
+nessie-versioned-storage-foundationdb=versioned/storage/foundationdb
+nessie-versioned-storage-foundationdb-tests=versioned/storage/foundationdb-tests
 nessie-versioned-storage-inmemory=versioned/storage/inmemory
 nessie-versioned-storage-inmemory-tests=versioned/storage/inmemory-tests
 nessie-versioned-storage-jdbc=versioned/storage/jdbc
