Adopt Nessie REST API + client
Follow up of #9282, which introduced content-key escaping that is compatible with Jakarta Servlet Spec v6.

This change tackles all endpoints that have query parameters with "problematic" characters (according to section 3.5.2 of the Jakarta Servlet Spec v6), either a content-key or a CEL filter (the latter is more difficult) and adds `POST` counterparts to the existing Nessie REST API v2 endpoints.

Unlike noted in #9282, it seems safe to add "Nessie spec version gate" at this point.

The Nessie REST API v2 client has been adopted to use the new endpoints, if the Nessie service announces Nessie spec >= 2.2.0.

--- a/api/model/src/redocly/.redocly.lint-ignore.yaml
+++ b/api/model/src/redocly/.redocly.lint-ignore.yaml
@@ -143,6 +143,8 @@ openapi.yaml:
     - '#/paths/~1v2~1config~1repository/get'
     - '#/paths/~1v2~1config~1repository/post'
     - '#/paths/~1v2~1trees/get'
+    - '#/paths/~1v2~1trees~1.all/post'
+    - '#/paths/~1v2~1trees~1.diff/post'
     - '#/paths/~1v2~1trees/post'
     - '#/paths/~1v2~1trees~1{branch}~1history~1commit/post'
     - '#/paths/~1v2~1trees~1{branch}~1history~1merge/post'
@@ -155,5 +157,7 @@ openapi.yaml:
     - '#/paths/~1v2~1trees~1{ref}~1contents/post'
     - '#/paths/~1v2~1trees~1{ref}~1contents~1{key}/get'
     - '#/paths/~1v2~1trees~1{ref}~1entries/get'
+    - '#/paths/~1v2~1trees~1{ref}~1entries/post'
     - '#/paths/~1v2~1trees~1{ref}~1history/get'
+    - '#/paths/~1v2~1trees~1{ref}~1history/post'
     - '#/paths/~1v2~1trees~1{ref}~1recent-changes/get'
